THRIFT-5448: map binary to typescript Buffer Client: js Author: OpportunityLiu